# todo_api_rust

./: .env  Cargo.toml  Rocket.toml
migrations/2021-04-25-152856_create_users/: up.sql
src/: main.rs  models.rs
src/api/: routes.rs  users_handlers.rs
src/database/: conn.rs
src/models/: schema.rs
src/models/users/: user_lib.rs  users.rs
