[package]
name = "rust-api"
version = "0.1.0"
authors = ["Ayan Banerjee <ayan.banerjee@sezzle.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4"
mysql = "20.1"
rocket_contrib = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4.19"